objects/ssot__ReturnOrderProductTax__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__Currency__c</fullName>
        <label>Currency Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Return Order Product Tax Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReturnOrderProductId__c</fullName>
        <label>Return Order Product</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReturnOrderProductPriceAdjId__c</fullName>
        <label>Return Order Product Price Adj</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReturnOrderProductTaxType__c</fullName>
        <label>Return Order Product Tax Type</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SalesOrderProductTaxId__c</fullName>
        <label>Sales Order Product Tax</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TaxAmount__c</fullName>
        <label>Tax Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TaxEffectiveDate__c</fullName>
        <label>Tax Effective Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__TaxRatePercent__c</fullName>
        <label>Tax Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761217325_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ReturnOrderProductTax_SalesOrderProd_rel</label>
        <referenceTo>ssot__SalesOrderProductTax__dlm</referenceTo>
        <relationshipLabel>ReturnOrderProductTax_SalesOrderProd_rel</relationshipLabel>
        <relationshipName>rel_1697761217325_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761217402_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ReturnOrderProductTax_ReturnOrderPro_rel</label>
        <referenceTo>ssot__ReturnOrderProduct__dlm</referenceTo>
        <relationshipLabel>ReturnOrderProductTax_ReturnOrderPro_rel</relationshipLabel>
        <relationshipName>rel_1697761217402_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761217477_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ReturnOrderProductTax_ReturnOrderPro_rel</label>
        <referenceTo>ssot__ReturnOrderProdPriceAdj__dlm</referenceTo>
        <relationshipLabel>ReturnOrderProductTax_ReturnOrderPro_rel</relationshipLabel>
        <relationshipName>rel_1697761217477_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>